# star-gen

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: tests.yaml
assets/icons/: 1024x1024.icns
assets/shaders/: star.wgsl
src/: bundles.rs  components.rs  events.rs  main.rs  persistence.rs  physics.rs  plugins.rs  resources.rs  tests.rs  types.rs  ui.rs  utils.rs
src/bundles/: custom_camera.rs  point3d.rs  star.rs
src/components/: selectable_point.rs  star_data.rs
src/events/: camera_target_focus.rs  camera_target_radius.rs  star_clicked.rs  star_cluster_generate.rs  star_delete.rs  star_delete_all.rs  star_generate_cubic.rs  star_spawn.rs  star_unselect.rs
src/materials/: star.rs
src/persistence/: save_state.rs  star_cluster_state.rs  star_state.rs
src/physics/: calculation.rs  randomization.rs  star.rs  types.rs
src/physics/calculation/: misc.rs  stellar.rs
src/physics/objects/: star.rs
src/physics/randomization/: stellar.rs
src/physics/types/: stellar_class.rs
src/plugins/: camera_events.rs  inputs.rs  interface.rs  misc.rs  settings.rs  star_events.rs  startup.rs  system.rs
src/plugins/camera_events/: target_focus.rs  target_radius.rs
src/plugins/inputs/: keyboard_inputs.rs  point_selection.rs
src/resources/: point_resources.rs  selected_point.rs  selected_star.rs  settings.rs  simulation_settings.rs  star_store.rs  ui.rs  window_manager.rs
src/tests/: test_save_load.rs
src/types/: cluster_generation_method.rs  sort_direction.rs
src/ui/: elements.rs  modals.rs  windows.rs
src/utils/: base64.rs  misc.rs  persistence.rs  random.rs
(+41 files in other folders)
