[package]
name = "star-gen"
version = "0.0.1"
edition = "2024"

[dependencies]
base64 = "0.22.1"
bevy = "0.15.3"
bevy_egui = "0.33.0"
bevy_panorbit_camera = "0.25.0"
egui_extras = "0.31.1"
rand = "0.9.1"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
ar = "x86_64-w64-mingw32-gcc-ar"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false