[package]
name = "star-gen"
version = "0.0.2"
description = "An application about generating random star clusters and playing around with them."
edition = "2024"

[dependencies]
base64 = "0.22.1"
bevy = "0.15.3"
bevy_egui = "0.33.0"
bevy_panorbit_camera = "0.25.0"
bincode = { version = "2.0.1", features = ["serde"] }
directories = "6.0.0"
egui_extras = "0.31.1"
flate2 = "1.1.1"
rand = "0.9.1"
serde = "1.0.219"
serde_json = "1.0.140"
uuid = { version = "1.12.1", features = ["v4"] }

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
ar = "x86_64-w64-mingw32-gcc-ar"

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false

[package.metadata.bundle]
name = "Star Generator"
identifier = "io.github.Zitronenjoghurt.star-gen"
short_description = "An application about generating random star clusters and playing around with them."
icon = ["icons/1024x1024.png", "icons/512x512.png", "icons/256x256.png", "icons/128x128.png", "icons/64x64.png", "icons/1024x1024.icns"]

[package.metadata.winresource]
